updated config with blacklist and schedule

--- a/config.json
+++ b/config.json
@@ -1,59 +1,225 @@
 {
-    "username": "MY_USERNAME",
+    "username": "christiankroer",
     "selfcontrol-path": "/Applications/SelfControl.app",
     "host-blacklist": [
+        "facebook.com",
+        "inbox.google.com",
+        "amazon.com",
+        "tumblr.com",
+        "youtube.com",
+        "9gag.com",
+        "netflix.com",
+        "hulu.com",
+        "buzzfeed.com",
+        "dailymotion.com",
+        "collegehumor.com",
+        "pinterest.com",
+        "cnn.com",
+        "huffingtonpost.com",
+        "nytimes.com",
+        "bbc.co.uk",
+        "bbc.com",
+        "bloomberg.com",
+        "feedly.com",
         "twitter.com",
         "reddit.com"
     ],
     "block-schedules":[
         {
             "weekday": 1,
-            "start-hour": 8,
+            "start-hour": 7,
             "start-minute": 0,
-            "end-hour": 17,
+            "end-hour": 10,
+            "end-minute": 0
+        },
+        {
+            "weekday": 1,
+            "start-hour": 10,
+            "start-minute": 30,
+            "end-hour": 12,
+            "end-minute": 30
+        },
+        {
+            "weekday": 1,
+            "start-hour": 13,
+            "start-minute": 30,
+            "end-hour": 16,
+            "end-minute": 20
+        },
+        {
+            "weekday": 1,
+            "start-hour": 19,
+            "start-minute": 30,
+            "end-hour": 23,
+            "end-minute": 20
+        },
+        {
+            "weekday": 2,
+            "start-hour": 7,
+            "start-minute": 0,
+            "end-hour": 10,
             "end-minute": 0
         },
         {
             "weekday": 2,
-            "start-hour": 8,
+            "start-hour": 10,
+            "start-minute": 30,
+            "end-hour": 12,
+            "end-minute": 30
+        },
+        {
+            "weekday": 2,
+            "start-hour": 13,
+            "start-minute": 30,
+            "end-hour": 16,
+            "end-minute": 20
+        },
+        {
+            "weekday": 2,
+            "start-hour": 19,
+            "start-minute": 30,
+            "end-hour": 23,
+            "end-minute": 20
+        },
+        {
+            "weekday": 3,
+            "start-hour": 7,
             "start-minute": 0,
-            "end-hour": 17,
+            "end-hour": 10,
             "end-minute": 0
         },
         {
             "weekday": 3,
-            "start-hour": 8,
+            "start-hour": 10,
+            "start-minute": 30,
+            "end-hour": 13,
+            "end-minute": 30
+        },
+        {
+            "weekday": 3,
+            "start-hour": 13,
+            "start-minute": 30,
+            "end-hour": 16,
+            "end-minute": 20
+        },
+        {
+            "weekday": 3,
+            "start-hour": 19,
+            "start-minute": 30,
+            "end-hour": 23,
+            "end-minute": 20
+        },
+        {
+            "weekday": 4,
+            "start-hour": 7,
             "start-minute": 0,
-            "end-hour": 17,
+            "end-hour": 10,
             "end-minute": 0
         },
         {
             "weekday": 4,
-            "start-hour": 8,
+            "start-hour": 10,
+            "start-minute": 30,
+            "end-hour": 14,
+            "end-minute": 30
+        },
+        {
+            "weekday": 4,
+            "start-hour": 13,
+            "start-minute": 30,
+            "end-hour": 16,
+            "end-minute": 20
+        },
+        {
+            "weekday": 4,
+            "start-hour": 19,
+            "start-minute": 30,
+            "end-hour": 23,
+            "end-minute": 20
+        },
+        {
+            "weekday": 5,
+            "start-hour": 7,
             "start-minute": 0,
-            "end-hour": 17,
+            "end-hour": 10,
             "end-minute": 0
         },
         {
             "weekday": 5,
-            "start-hour": 8,
+            "start-hour": 10,
+            "start-minute": 30,
+            "end-hour": 15,
+            "end-minute": 30
+        },
+        {
+            "weekday": 5,
+            "start-hour": 13,
+            "start-minute": 30,
+            "end-hour": 16,
+            "end-minute": 20
+        },
+        {
+            "weekday": 5,
+            "start-hour": 19,
+            "start-minute": 30,
+            "end-hour": 23,
+            "end-minute": 20
+        },
+        {
+            "weekday": 6,
+            "start-hour": 7,
             "start-minute": 0,
-            "end-hour": 17,
+            "end-hour": 10,
             "end-minute": 0
         },
         {
             "weekday": 6,
-            "start-hour": 8,
+            "start-hour": 10,
+            "start-minute": 30,
+            "end-hour": 16,
+            "end-minute": 30
+        },
+        {
+            "weekday": 6,
+            "start-hour": 13,
+            "start-minute": 30,
+            "end-hour": 16,
+            "end-minute": 20
+        },
+        {
+            "weekday": 6,
+            "start-hour": 19,
+            "start-minute": 30,
+            "end-hour": 23,
+            "end-minute": 20
+        },
+        {
+            "weekday": 7,
+            "start-hour": 7,
             "start-minute": 0,
-            "end-hour": 17,
+            "end-hour": 10,
             "end-minute": 0
         },
         {
             "weekday": 7,
-            "start-hour": 8,
-            "start-minute": 0,
+            "start-hour": 10,
+            "start-minute": 30,
             "end-hour": 17,
-            "end-minute": 0
+            "end-minute": 30
+        },
+        {
+            "weekday": 7,
+            "start-hour": 13,
+            "start-minute": 30,
+            "end-hour": 16,
+            "end-minute": 20
+        },
+        {
+            "weekday": 7,
+            "start-hour": 19,
+            "start-minute": 30,
+            "end-hour": 23,
+            "end-minute": 20
         }
     ]
 }
