--- a/config.json
+++ b/config.json
@@ -22,7 +22,8 @@
         "bloomberg.com",
         "feedly.com",
         "twitter.com",
-        "reddit.com"
+        "reddit.com",
+        "channelfireball.com"
     ],
     "block-schedules":[
         {
