--- a/config.json
+++ b/config.json
@@ -22,6 +22,7 @@
         "bloomberg.com",
         "feedly.com",
         "twitter.com",
+        "twitch.com",
         "reddit.com",
         "channelfireball.com"
     ],
