added linkedin and twitch

--- a/config.json
+++ b/config.json
@@ -23,7 +23,9 @@
         "feedly.com",
         "twitter.com",
         "twitch.com",
+        "twitch.tv",
         "reddit.com",
+        "linkedin.com",
         "channelfireball.com"
     ],
     "block-schedules":[
